add_executable(theafter
main.cpp
AbstractScene.h
Camera.cpp
Camera.h
Character.cpp
Character.h
Entity.cpp
Entity.h
GameCore.cpp
GameCore.h
GameScene.cpp
GameScene.h
GameoverScene.cpp
GameoverScene.h
HUD.cpp
HUD.h
MainPlayer.cpp
MainPlayer.h
Map.cpp
Map.h
RenderingArray.cpp
RenderingArray.h
Room.cpp
Room.h
RoomMask.cpp
RoomMask.h
SceneManager.cpp
SceneManager.h
Settings.cpp
Settings.h
SplashScreenScene.cpp
SplashScreenScene.h
Student.cpp
Student.h
TextBox.cpp
TextBox.h
TextBoxBackground.cpp
TextBoxBackground.h
Tile.cpp
Tile.h
TileMap.cpp
TileMap.h
TitleScene.cpp
TitleScene.h
Vigil.cpp
Vigil.h
	Events/Events.cpp
	Events/Events.h
	Events/Keyboard.cpp
	Events/Keyboard.h
	Events/Mouse.cpp
	Events/Mouse.h
	Graphics/Drawable.h
	Graphics/FontHandler.cpp
	Graphics/FontHandler.h
	Graphics/Graphics.cpp
	Graphics/Graphics.h
	Graphics/TextureHandler.cpp
	Graphics/TextureHandler.h
	Primitives/Astar.cpp
	Primitives/Astar.h
	Primitives/EllipseShape.cpp
	Primitives/EllipseShape.h
	Primitives/Perlin.cpp
	Primitives/Perlin.h
	Primitives/StringPrimitives.h)

target_link_libraries(theafter sfml-graphics sfml-window sfml-system -lstdc++fs)
